ui: findbugs minor